# pepe-track-players

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  run.bat  vcpkg.json
docs/: backend.md  data-formats.md  qml.md
qml/: CMakeLists.txt  ChunksView.qml  EditField.qml  FeaturesPlayerView.qml  FeaturesView.qml  FormationInput.qml  FrameTransport.qml  HomographyView.qml  Main.qml  MetadataView.qml  NavItem.qml  PlayerDropdown.qml  ProjectMenu.qml  RosterTable.qml  SideNav.qml  StatCard.qml  SyncView.qml  Theme.qml  TopBar.qml  TrackingView.qml  VideoOpsPanel.qml  VideoSurface.qml  VideoView.qml
scripts/: ocr.ps1
src/: AppController.cpp  AppController.h  FrameProvider.cpp  FrameProvider.h  HomographyManager.cpp  HomographyManager.h  HomographySolver.cpp  HomographySolver.h  HomographyWorker.cpp  HomographyWorker.h  LineCalibrator.cpp  LineCalibrator.h  LineupExtractor.cpp  LineupExtractor.h  LineupPositionExtractor.cpp  LineupPositionExtractor.h  MaskGenerator.cpp  MaskGenerator.h  MatchManager.cpp  MatchManager.h  MatchMetadata.cpp  MatchMetadata.h  PlayerSamples.cpp  PlayerSamples.h  RosterModel.cpp  RosterModel.h  ShotDetector.cpp  ShotDetector.h  TagsModel.cpp  TagsModel.h  TrackingManager.cpp  TrackingManager.h  TracksModel.cpp  TracksModel.h  VideoEngine.cpp  VideoEngine.h  VideoOpsWorker.cpp  VideoOpsWorker.h  YoloDetector.cpp  YoloDetector.h  (+1 more)
